<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/main_EDT_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/minimum_3_characters_only_letters"
            android:layout_weight="0.3"
            android:padding="20dp"
            />
        <EditText
            android:id="@+id/main_EDT_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/minimum_8_signs_only_letters_and_numbers"
            android:layout_weight="0.3"
            android:padding="20dp"
            />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_LBL_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/wifi_enabled"
        android:textColor="@color/design_default_color_error"
        android:padding="20dp"
        />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_LBL_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/battery_level_above_required"
            android:textColor="@color/design_default_color_error"
            android:padding="30dp"
            />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:padding="30dp"
        />
    </LinearLayout>

</RelativeLayout>